# Hindsight

./: .gitignore  README.md  app.py  demo_pipeline.py  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
src/data/: yf_prices.parquet
src/factorlabs/analytics/: benchmark.py  metrics.py
src/factorlabs/backtest/: backtester.py  strategy.py
src/factorlabs/cli/: __init__.py  main.py
src/factorlabs/data/: ingest_yf.py  io_utils.py
src/factorlabs/data/src/: ingest_yf.py
src/factorlabs/data/src/data/: yf_prices.parquet
src/factorlabs/financialfeatures/: factors.py
src/factorlabs/visualization/: __init__.py  charts.py
src/hindsightpy/analytics/: __init__.py  benchmark.py
src/hindsightpy/backtest/: __init__.py  portfolio.py  rebalancer.py  strategy.py
src/hindsightpy/cli/: __init__.py  main.py
src/hindsightpy/data/: ingest_yf.py  io_utils.py
src/hindsightpy/financialfeatures/: factors.py
src/hindsightpy/visualization/: __init__.py  charts.py
tests/: dummy_data.py  example_workflow.py  test_analytics.py  test_backtester.py  test_benchmark.py  test_data_quality.py  test_factors.py  test_ingest_yf.py  test_portfolio.py  test_portfolio_enhancements.py  test_rebalancer.py  test_strategy.py  test_transaction_costs.py  test_utils.py  test_visualization.py
