[tool.poetry]
packages = [{include = "factorlabs", from = "src"}]

[project]
name = "factorlab"
version = "0.1.0"
description = "Backtesting Engine focused on reliability and speed. Education first"
authors = [
    {name = "Gabe Meredith",email = "gabriel.b.meredith@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.34.0,<2.0.0)",
    "duckdb (>=1.4.1,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "typer[all] (>=0.9.0,<1.0.0)",
    "plotext (>=5.2.0,<6.0.0)"
]


[project.scripts]
factorlab = "factorlabs.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
